--- a/WpfProyectoBancoP2C/WpfProyectoBancoP2C/MainWindow.xaml
+++ b/WpfProyectoBancoP2C/WpfProyectoBancoP2C/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WpfProyectoBancoP2C"
         mc:Ignorable="d"
-        Title="Login"
+        Title="Banco Bisa - Login"
         Height="550"
         Width="400"
         Icon="/images/LogoBisa.png">
@@ -34,7 +34,7 @@
                Content="Email:"
                FontSize="30"
                Grid.Row="1"/>
-        <TextBox x:Name="txtemail"
+        <TextBox x:Name="TxtEmail"
                  Grid.Column="2"
                  Grid.Row="1"/>
 
@@ -53,16 +53,26 @@
                      Opacity="0.7"/>
         <Button x:Name="btnLimpiar"
                 Content="Limpiar"
-                Grid.Row="3"/>
+                Grid.Row="3"
+                Click="btnLimpiar_Click"/>
+        
         <Button x:Name="btnAceptar"
                 Content="Aceptar"
                 Grid.Row="3"
-                Grid.Column="2"/>
+                Grid.Column="2"
+                Click="btnAceptar_Click"/>
         <Button x:Name="btnRegistrar"
                 Content="Registrarse"
                 Grid.Row="4"
                 Grid.ColumnSpan="2"
+                Click="btnRegistrar_Click"
                />
+        <Label x:Name="lblMensaje"
+               Foreground="Red"
+               Content=""
+               Grid.Row="4"
+               Grid.ColumnSpan="2"
+               FontSize="15"/>
         
 
     </Grid>
